# lab-10-dynamic-struct

./: README.md
include/: list.hpp  queue.hpp  stack.hpp
sources/: ForwardList.cpp  Queue.cpp  Stack.cpp  meson.build
tests/: list_unittests.cpp  meson.build  queue_unittests.cpp  stack_unittests.cpp
